--- a/README
+++ b/README
@@ -2,7 +2,7 @@
                         version 01-01-2010
 
 Bugs and help / improvements will be appreciated, please send them to
-leledumbo_cool@yahoo.co.id.
+yacine.rezgui@gmail.com.
 
 Implemented:
 - GDT, IDT       ( no problem... I hope )
