--- a/README
+++ b/README
@@ -2,7 +2,8 @@
                         version 01-01-2010
 
 Bugs and help / improvements will be appreciated, please send them to
-yacine.rezgui@gmail.com and leledumbo_cool@yahoo.co.id.
+(Yacine REZGUI) yacine.rezgui@gmail.com and 
+(Mario Ray Mahardhika) leledumbo_cool@yahoo.co.id.
 
 Implemented:
 - GDT, IDT       ( no problem... I hope )
